fix key not showing in settings

--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -5,3 +5,6 @@ a {
 .main-container {
   padding-top: 70px;
 }
+[hidden] {
+  display: none !important;
+}
